WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
173127
[iOS] Video occasionally mixes with other system audio instead of interrupting
https://bugs.webkit.org/show_bug.cgi?id=173127
Summary
[iOS] Video occasionally mixes with other system audio instead of interrupting
Jer Noble
Reported
2017-06-08 21:32:28 PDT
[iOS] Video occasionally mixes with other system audio instead of interrupting
Attachments
Patch
(17.14 KB, patch)
2017-06-08 21:56 PDT
,
Jer Noble
no flags
Details
Formatted Diff
Diff
Archive of layout-test-results from ews101 for mac-elcapitan
(1.01 MB, application/zip)
2017-06-08 22:57 PDT
,
Build Bot
no flags
Details
Archive of layout-test-results from ews104 for mac-elcapitan-wk2
(1.06 MB, application/zip)
2017-06-08 23:03 PDT
,
Build Bot
no flags
Details
Archive of layout-test-results from ews114 for mac-elcapitan
(1.77 MB, application/zip)
2017-06-08 23:19 PDT
,
Build Bot
no flags
Details
Patch
(17.32 KB, patch)
2017-06-09 00:12 PDT
,
Jer Noble
no flags
Details
Formatted Diff
Diff
Archive of layout-test-results from ews102 for mac-elcapitan
(1.26 MB, application/zip)
2017-06-09 01:04 PDT
,
Build Bot
no flags
Details
Archive of layout-test-results from ews113 for mac-elcapitan
(1.84 MB, application/zip)
2017-06-09 01:15 PDT
,
Build Bot
no flags
Details
Archive of layout-test-results from ews106 for mac-elcapitan-wk2
(1.22 MB, application/zip)
2017-06-09 01:18 PDT
,
Build Bot
no flags
Details
Patch
(17.34 KB, patch)
2017-06-09 08:26 PDT
,
Jer Noble
eric.carlson
: review+
commit-queue
: commit-queue-
Details
Formatted Diff
Diff
Show Obsolete
(8)
View All
Add attachment
proposed patch, testcase, etc.
Jer Noble
Comment 1
2017-06-08 21:56:15 PDT
Created
attachment 312377
[details]
Patch
Build Bot
Comment 2
2017-06-08 22:57:52 PDT
Comment on
attachment 312377
[details]
Patch
Attachment 312377
[details]
did not pass mac-ews (mac): Output:
http://webkit-queues.webkit.org/results/3897886
New failing tests: platform/mac/audio-session-category-video-track-change.html
Build Bot
Comment 3
2017-06-08 22:57:53 PDT
Created
attachment 312388
[details]
Archive of layout-test-results from ews101 for mac-elcapitan The attached test failures were seen while running run-webkit-tests on the mac-ews. Bot: ews101 Port: mac-elcapitan Platform: Mac OS X 10.11.6
Build Bot
Comment 4
2017-06-08 23:02:59 PDT
Comment on
attachment 312377
[details]
Patch
Attachment 312377
[details]
did not pass mac-wk2-ews (mac-wk2): Output:
http://webkit-queues.webkit.org/results/3897909
New failing tests: platform/mac/audio-session-category-video-track-change.html
Build Bot
Comment 5
2017-06-08 23:03:00 PDT
Created
attachment 312390
[details]
Archive of layout-test-results from ews104 for mac-elcapitan-wk2 The attached test failures were seen while running run-webkit-tests on the mac-wk2-ews. Bot: ews104 Port: mac-elcapitan-wk2 Platform: Mac OS X 10.11.6
Build Bot
Comment 6
2017-06-08 23:19:07 PDT
Comment on
attachment 312377
[details]
Patch
Attachment 312377
[details]
did not pass mac-debug-ews (mac): Output:
http://webkit-queues.webkit.org/results/3897958
New failing tests: platform/mac/audio-session-category-video-track-change.html
Build Bot
Comment 7
2017-06-08 23:19:08 PDT
Created
attachment 312391
[details]
Archive of layout-test-results from ews114 for mac-elcapitan The attached test failures were seen while running run-webkit-tests on the mac-debug-ews. Bot: ews114 Port: mac-elcapitan Platform: Mac OS X 10.11.6
Jer Noble
Comment 8
2017-06-09 00:12:13 PDT
Created
attachment 312398
[details]
Patch
Build Bot
Comment 9
2017-06-09 01:04:19 PDT
Comment on
attachment 312398
[details]
Patch
Attachment 312398
[details]
did not pass mac-ews (mac): Output:
http://webkit-queues.webkit.org/results/3898533
New failing tests: platform/mac/media/audio-session-category-video-track-change.html
Build Bot
Comment 10
2017-06-09 01:04:20 PDT
Created
attachment 312406
[details]
Archive of layout-test-results from ews102 for mac-elcapitan The attached test failures were seen while running run-webkit-tests on the mac-ews. Bot: ews102 Port: mac-elcapitan Platform: Mac OS X 10.11.6
Build Bot
Comment 11
2017-06-09 01:15:43 PDT
Comment on
attachment 312398
[details]
Patch
Attachment 312398
[details]
did not pass mac-debug-ews (mac): Output:
http://webkit-queues.webkit.org/results/3898522
New failing tests: platform/mac/media/audio-session-category-video-track-change.html
Build Bot
Comment 12
2017-06-09 01:15:44 PDT
Created
attachment 312408
[details]
Archive of layout-test-results from ews113 for mac-elcapitan The attached test failures were seen while running run-webkit-tests on the mac-debug-ews. Bot: ews113 Port: mac-elcapitan Platform: Mac OS X 10.11.6
Build Bot
Comment 13
2017-06-09 01:18:57 PDT
Comment on
attachment 312398
[details]
Patch
Attachment 312398
[details]
did not pass mac-wk2-ews (mac-wk2): Output:
http://webkit-queues.webkit.org/results/3898611
New failing tests: platform/mac/media/audio-session-category-video-track-change.html
Build Bot
Comment 14
2017-06-09 01:18:58 PDT
Created
attachment 312409
[details]
Archive of layout-test-results from ews106 for mac-elcapitan-wk2 The attached test failures were seen while running run-webkit-tests on the mac-wk2-ews. Bot: ews106 Port: mac-elcapitan-wk2 Platform: Mac OS X 10.11.6
Jer Noble
Comment 15
2017-06-09 08:26:33 PDT
Created
attachment 312435
[details]
Patch
Jon Lee
Comment 16
2017-06-09 08:43:37 PDT
Comment on
attachment 312435
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=312435&action=review
> Source/WebCore/ChangeLog:4 > +
https://bugs.webkit.org/show_bug.cgi?id=173127
radar?
Jer Noble
Comment 17
2017-06-09 08:57:57 PDT
rdar://problem/31726043
Radar WebKit Bug Importer
Comment 18
2017-06-09 08:58:16 PDT
<
rdar://problem/32675574
>
Jer Noble
Comment 19
2017-06-09 09:04:44 PDT
(In reply to Radar WebKit Bug Importer from
comment #18
)
> <
rdar://problem/32675574
>
Bad Radar WebKit Bug Importer. No cookie.
Jer Noble
Comment 20
2017-06-09 09:05:00 PDT
<
rdar://problem/31726043
>
WebKit Commit Bot
Comment 21
2017-06-09 10:45:15 PDT
Comment on
attachment 312435
[details]
Patch Rejecting
attachment 312435
[details]
from commit-queue. Failed to run "['/Volumes/Data/EWS/WebKit/Tools/Scripts/webkit-patch', '--status-host=webkit-queues.webkit.org', '--bot-id=webkit-cq-03', 'apply-attachment', '--no-update', '--non-interactive', 312435, '--port=mac']" exit_code: 2 cwd: /Volumes/Data/EWS/WebKit Last 500 characters of output: hunk FAILED -- saving rejects to file Source/WebCore/testing/Internals.idl.rej patching file LayoutTests/ChangeLog Hunk #1 succeeded at 1 with fuzz 3. patching file LayoutTests/platform/mac/media/audio-session-category-video-track-change-expected.txt patching file LayoutTests/platform/mac/media/audio-session-category-video-track-change.html Failed to run "[u'/Volumes/Data/EWS/WebKit/Tools/Scripts/svn-apply', '--force', '--reviewer', u'Eric Carlson']" exit_code: 1 cwd: /Volumes/Data/EWS/WebKit Full output:
http://webkit-queues.webkit.org/results/3901302
Jer Noble
Comment 22
2017-06-09 10:57:27 PDT
Committed
r217999
: <
http://trac.webkit.org/changeset/217999
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug